<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2018 Andrey Tolpeev
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.travelbackintime.buybitcoin.time_travel.view.TimeTravelActivity"
    tools:showIn="@layout/activity_time_travel">

    <TextView
        style="@style/VideoGameTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        android:textSize="36sp"
        android:text="@string/app_name" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        style="@style/VideoGameTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        android:textSize="22sp"
        android:text="@string/app_description" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/button_set_date"
        style="@style/VideoGameButtonStyle"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:text="@string/button_set_date_title" />

    <Button
        android:id="@+id/button_set_amount"
        style="@style/VideoGameButtonStyle"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:text="@string/button_set_amount_title" />

    <Button
        android:id="@+id/button_buy_bitcoin"
        style="@style/VideoGameButtonStyle"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:text="@string/button_buy_bitcoin_title"
        android:enabled="false"
        android:alpha="0.3" />

</LinearLayout>
