<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2018 Andrey Tolpeev
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.travelbackintime.buybitcoin.time_travel.view.TimeTravelActivity">

    <data>

        <variable
            name="viewModel"
            type="com.travelbackintime.buybitcoin.time_travel.view.TimeTravelViewModel" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:orientation="vertical"
                android:padding="16dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <TextView
                    style="@style/VideoGameTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/app_name"
                    android:textColor="@color/colorWhite"
                    android:textSize="36sp" />

                <android.support.v4.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    style="@style/VideoGameTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/app_description"
                    android:textColor="@color/colorWhite"
                    android:textSize="22sp" />

                <android.support.v4.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <Button
                    style="@style/VideoGameButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_marginTop="8dp"
                    android:text="@{viewModel.timeToTravelText}"
                    android:onClick="@{() -> viewModel.onSetTimeToTravelButtonClick()}"
                    tools:text="@string/button_set_date_title" />

                <Button
                    style="@style/VideoGameButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_marginTop="8dp"
                    android:text="@{viewModel.investedMoneyText}"
                    android:onClick="@{() -> viewModel.onSetInvestedMoneyButtonClick()}"
                    tools:text="@string/button_set_amount_title" />

                <Button
                    style="@style/VideoGameButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_marginTop="8dp"
                    android:alpha="@{viewModel.isBuyBitcoinButtonEnabled ? 1f : 0.3f}"
                    android:enabled="@{viewModel.isBuyBitcoinButtonEnabled}"
                    android:text="@string/button_buy_bitcoin_title"
                    android:onClick="@{() -> viewModel.onBuyBitcoinButtonClick()}" />

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>

</layout>
