<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2021  Andrey Tolpeev
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_set_1"
            style="@style/Widget.MaterialComponents.VideoGameButton"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/button_confirm_amount_title_1"
            android:textAppearance="@style/TextAppearance.Button.Suggestion" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_set_10"
            style="@style/Widget.MaterialComponents.VideoGameButton"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/button_confirm_amount_title_10"
            android:textAppearance="@style/TextAppearance.Button.Suggestion" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_set_100"
            style="@style/Widget.MaterialComponents.VideoGameButton"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/button_confirm_amount_title_100"
            android:textAppearance="@style/TextAppearance.Button.Suggestion" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:id="@+id/edit_text_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorTextAppearance="@style/TextAppearance.Amount"
        app:hintTextAppearance="@style/TextAppearance.Amount"
        app:hintTextColor="?attr/colorOnSurface">

        <EditText
            android:id="@+id/edit_text_set_invested_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:lines="1"
            android:textSize="36sp"
            android:textAppearance="@style/TextAppearance.Amount"
            android:textColor="?attr/colorOnSurface"
            android:longClickable="false"
            android:maxLength="10"
            android:theme="@style/Theme.EditText" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_set_invested_money"
        style="@style/Widget.MaterialComponents.VideoGameButton"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:text="@string/button_confirm_amount_title" />

</LinearLayout>